# larvis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.lb/: config.jsonc
CC-Session-Logs/: 2026-06-03-larvis-phase1-build.md  2026-06-10-phase2-implementation.md
docs/: runbook.md
docs/superpowers/plans/: 2026-06-10-larvis-phase3-ynab-agent.md  2026-06-10-larvis-phase4-calendar-agent.md  2026-06-11-larvis-phase5-gmail-agent.md  2026-06-11-larvis-phase6-skylight-agent.md  2026-06-11-larvis-phase7-orchestrator.md  2026-06-12-larvis-openai-endpoint.md
docs/superpowers/specs/: 2026-06-01-larvis-phase1-design.md  2026-06-01-larvis-phase1-plan.md  2026-06-05-larvis-phase2-design.md  2026-06-05-larvis-phase2-plan.md  2026-06-10-larvis-calendar-agent-design.md  2026-06-10-larvis-phase3-design.md  (+4 more)
larvis/: __main__.py  cli.py  config.py  health.py  indexer.py  openai_api.py  rag.py  server.py
larvis/agents/gcal/: auth.py  (+3 more)
larvis/orchestrator/: adapters.py  pending.py  router.py  synthesize.py  tools.py
tests/: test_gcal_scheduling.py  test_gcal_tools.py  test_gmail_auth.py  test_gmail_client.py  test_gmail_tools.py  test_indexer.py  test_lifeos_memory.py  test_lifeos_sync.py  test_lifeos_tools.py  test_openai_api.py  test_orchestrator_adapters.py  test_orchestrator_pending.py  test_orchestrator_router.py  test_orchestrator_synthesize.py  test_orchestrator_tools.py  test_rag.py  test_skylight_auth.py  test_skylight_client.py  test_skylight_tools.py  test_ynab_cache.py  test_ynab_tools.py
(+12 files in other folders)
