[project]
name = "larvis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4",
    "chromadb>=0.5",
    "fastmcp>=2.0",
    "click>=8.0",
    "python-frontmatter>=1.0",
    "tiktoken>=0.7",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.scripts]
larvis = "larvis.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
